--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://VarasMD.github.io/react-tasks-app"
+  "homepage": "https://VarasMD.github.io/react_tasks-app"
 }
